--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,6 +20,8 @@
  * OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  * OTHER DEALINGS IN THE SOFTWARE.
  *
+ * Project 3     Anthony Fernandez     Style.css       10Mar2017
+ *
  * Modifications Log:
  *    NAME        DATE            DESCRIPTION
  * 1. Anthony     10Mar2017       Mod lines 222-238 font-size, padding, .android:color
