--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,7 +25,8 @@
  * Modifications Log:
  *    NAME        DATE            DESCRIPTION
  * 1. Anthony     10Mar2017       Mod lines 222-238 font-size, padding, .android:color
- * 2. Anthony     15Mar2017       Mod lines 23-26 added Modifications log 
+ * 2. Anthony     15Mar2017       Mod lines 23-26 added Modifications log
+ * 3. Anthony     15Mar2017       Mod lines 229-234 font-size, line-height, font-weight, color, float, padding-left
  */
 
 /* General styles */
